# bdk-ffi-wasm

./: Cargo.toml  README.md
src/: descriptor.rs  error.rs  esplora.rs  lib.rs  lib_new.rs  types.rs  wallet.rs
tests/: web.rs
