[package]
name = "bdk-ffi-wasm"
version = "1.0.0-alpha.11"
homepage = "https://bitcoindevkit.org"
repository = "https://github.com/bitcoindevkit/bdk"
edition = "2018"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.95"
wasm-bindgen-futures = "0.4.45"
js-sys = "0.3.72"
web-sys = { version = "0.3.72", features = ["console"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

# Compatibility to compile to WASM
getrandom = { version = "0.2.15", features = ["js"] }
ring = { version = "0.17.8", features = ["wasm32_unknown_unknown_js"] }

# BDK dependencies
bdk_wallet = { version = "=1.0.0-beta.5", features = ["all-keys", "keys-bip39"] }
bdk_core = { version = "0.3.0" }
bdk_esplora = { version = "0.19.0", features = ["async-https"] }
bdk_electrum = { version = "0.19.0", default-features = false, features = ["use-rustls-ring"] }

thiserror = "1.0.58"

[dev-dependencies]
wasm-bindgen-test = "0.3.45"
anyhow = "1.0.93"
bdk_wallet = { version = "1.0.0-beta.5", features = ["keys-bip39"] }
miniscript = "12.2.0"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
